fixtures/parser/valid/first_class_callable.php
<?php
$a = foo(...);
$b = $obj->method(...);
$c = Foo::bar(...);
