fixtures/parser/invalid/expressions_postfix_invalid.php
<?php
// invalid: postfix chains are missing closing delimiters or member names
$a[0;
$obj->;
foo(;
